# base-import-tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-28-sql-data-import.md
docs/superpowers/specs/: 2026-06-28-sql-data-import-design.md
release-for-implementation/: README-实施说明.md
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/oracle-client-macos/: fips.dylib  legacy.dylib  libocijdbc23.dylib  pkcs11.dylib
src-tauri/src/: commands.rs  config_store.rs  csv_parser.rs  ddl_converter.rs  lib.rs  main.rs  models.rs
src-tauri/src/db/: dm_conn.rs  encoding.rs  mod.rs  mysql_conn.rs  oracle_conn.rs  pg_conn.rs
src-tauri/tests/: commands_tests.rs  config_store_tests.rs  csv_parser_tests.rs  ddl_converter_tests.rs  mysql_conn_tests.rs  oracle_client_config_tests.rs  oracle_conn_tests.rs
src/components/: DbConfigManager.tsx  FileScanner.tsx  ImportManager.tsx  SchemaInit.tsx
