[package]
name = "base-import-tool"
version = "0.1.0"
edition = "2021"

[lib]
name = "base_import_tool_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "base-import-tool"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

# Oracle 数据库驱动 (需要系统安装 Oracle Instant Client)
oracle = "0.6"

# PostgreSQL 数据库驱动
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"

# MySQL 数据库驱动
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }

# 达梦数据库驱动 (通过 ODBC 方式, 需要安装达梦 ODBC 驱动和 unixODBC)
odbc-api = { version = "8", features = ["narrow"] }

# 日志
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
